--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,26 @@
      <section id="About" class="py-5">
        <div class="container">
          <div class="row">
-         
+          <section class="prat-3 p-5 container">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-6 md-6">
+                  <img src="image/Abdallah.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-lg-6 md-6 cla">
+                  <h2 style="font-size: 22px; font-weight: bolder; color: #000; text-align: center; text-transform: none; height: 20%;">About</h2>
+                  <ul>
+                    <li>Name:Abdallah Mohamed</li>
+                    <li>Pone:20 011 4894 7966</li>
+                    <li>Job Title:Web Designer</li>
+                    <li>Age: 19 Year</li>
+                    <li>Freelance: Available</li>
+                    <li>E-mail:abdallahaphd@.com</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
 
          
 
@@ -240,7 +259,7 @@
                       </div> 
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                         <div class="logo">
-                            <img src="../Image/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
+                            <img src="../image/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
                             <div class="layout">
                               <i class="fa fa-link">
                               </i>
@@ -572,7 +591,7 @@
 <div class="row">
   <div class="col-lg-12">
 <div class="foot">
-    Copy Right 2018 © By <a href="#">Abdallah-Rabeh</a> All Rights Reserved
+    Copy Right 2020 © By <a href="#">Abdallah-Rabeh</a> All Rights Reserved
 </div>
 
   </div>
