--- a/Home.html
+++ b/Home.html
@@ -259,7 +259,7 @@
                       </div> 
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                         <div class="logo">
-                            <img src="../image/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
+                            <img src="Abdallah/chef/images/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
                             <div class="layout">
                               <i class="fa fa-link">
                               </i>
