--- a/Home.html
+++ b/Home.html
@@ -75,10 +75,11 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 md-6">
-                  <img src="image/Abdallah.jpg" alt="" class="img-fluid">
+                  <img src="image/6c687136-d59a-4ac5-b31f-06228c7a4b5e.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-lg-6 md-6 cla">
-                  <h2 style="font-size: 22px; font-weight: bolder; color: #000; text-align: center; text-transform: none; height: 20%;">About</h2>
+                  <h2 style="font-size: 20px; font-weight: 700; color: #000; text-align: end; text-transform: none; letter-spacing: 65px;
+                  line-height: inherit; border-bottom: 10px solid;">Abouts</h2>
                   <ul>
                     <li>Name:Abdallah Mohamed</li>
                     <li>Pone:20 011 4894 7966</li>
