--- a/Home.html
+++ b/Home.html
@@ -78,7 +78,7 @@
                   <img src="image/6c687136-d59a-4ac5-b31f-06228c7a4b5e.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-lg-6 md-6 cla">
-                  <h2 style="font-size: 20px; font-weight: 700; color: #000; text-align: end; text-transform: none; letter-spacing: 65px;
+                  <h2 style="font-size: 20px; font-weight: 700; color: #000; text-align: center; text-transform: none; letter-spacing: 40px;
                   line-height: inherit; border-bottom: 10px solid;">Abouts</h2>
                   <ul>
                     <li>Name:Abdallah Mohamed</li>
