--- a/Home.html
+++ b/Home.html
@@ -240,16 +240,14 @@
                     <div class="row">  
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                             <div class="logo">
-                              
-                                <img src="Abdallah/APHD/images/about.jpg"alt="" class="img-fluid" style="position: relative;">
-                                <div class="layout" style="position: absolute; top: 0; left: 0; width: 100%;">
+                                <img src="Abdallah/APHD/images/about.jpg"alt="" class="img-fluid">
+                                <div class="layout">
                                   <i class="fa fa-link">
                                   </i>
                                 <button style="padding: 20px;
                                   display: block;
                                   margin: 50% auto;
                                     "
-                                     style="position: absolute; top: 0; left: 0; width: 100%;"
                                   onclick="window.location.href='./Abdallah/APHD/Home.html';" >Project 1
                                 </button>
                                 </div>
@@ -258,14 +256,14 @@
                       </div> 
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                         <div class="logo">
-                            <img src="Abdallah/chef/images/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%; position: relative;">
+                            <img src="Abdallah/chef/images/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
                             <div class="layout">
                               <i class="fa fa-link">
                               </i>
                               <button style="padding: 20px;
                               display: block;
                               margin: 50% auto;
-                                "  style="position: absolute; top: 0; left: 0; width: 100%;"
+                                "
                               onclick="window.location.href='./Abdallah/chef/Home.html';" >Project 2</button>
                             </div>
                     </div>
@@ -273,7 +271,7 @@
                       </div>
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="./image/profile.jpg"alt="" class="img-fluid" style="position: relative;">
+                        <img src="./image/profile.jpg"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -281,7 +279,6 @@
                           display: block;
                           margin: 50% auto;
                             "
-                             style="position: absolute; top: 0; left: 0; width: 100%;"
                           onclick="window.location.href='./Abdallah/fokir/Home.html';" >Project 3</button>
                         </div>
                 </div>
@@ -289,7 +286,7 @@
                   </div> 
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="image/bg.jpg"alt="" class="img-fluid" style="position: relative;">
+                        <img src="image/bg.jpg"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -297,7 +294,6 @@
                           display: block;
                           margin: 50% auto;
                             "
-                             style="position: absolute; top: 0; left: 0; width: 100%;"
                           onclick="window.location.href='./Abdallah/crispy-1/Home.html';" >Project 4</button>
                         </div>
                 </div>
@@ -305,7 +301,7 @@
                   </div> 
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="Abdallah/new-44/images/img_03.jpg"alt="" class="img-fluid" style="position: relative;">
+                        <img src="Abdallah/new-44/images/img_03.jpg"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -313,7 +309,6 @@
                           display: block;
                           margin: 50% auto;
                             "
-                             style="position: absolute; top: 0; left: 0; width: 100%;"
                           onclick="window.location.href='./Abdallah/new-44/index.html';" >Project 5</button>
                         </div>
                 </div>
@@ -321,14 +316,14 @@
                   </div>     
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="image/Screenshot_2020-08-09 Abdallah Rabeh.png"alt="" class="img-fluid" style="position: relative;">
+                        <img src="image/Screenshot_2020-08-09 Abdallah Rabeh.png"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
                           <button style="padding: 20px;
                           display: block;
                           margin: 50% auto;
-                            "  style="position: absolute; top: 0; left: 0; width: 100%;"
+                            "
                           onclick="window.location.href='./Abdallah/session-4/Home.html';" >Project 6</button>
                         </div>
                 </div>
