--- a/Home.html
+++ b/Home.html
@@ -204,7 +204,7 @@
                     <div class="row">  
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                             <div class="logo">
-                                <img src="Abdallah/APHD/images/about.jpg"alt="" class="img-fluid">
+                                <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(1).png"alt="" class="img-fluid">
                                 <div class="layout">
                                   <i class="fa fa-link">
                                   </i>
@@ -220,7 +220,7 @@
                       </div> 
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                         <div class="logo">
-                            <img src="Abdallah/chef/images/chef-2.jpg"alt="" class="img-fluid" style="max-width: 70%;">
+                            <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(1).jpg"alt="" class="img-fluid" style="max-width: 70%;">
                             <div class="layout">
                               <i class="fa fa-link">
                               </i>
@@ -235,7 +235,7 @@
                       </div>
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="./image/profile.jpg"alt="" class="img-fluid">
+                        <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(3).png"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -250,7 +250,7 @@
                   </div> 
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="image/bg.jpg"alt="" class="img-fluid">
+                        <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(4).png"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -265,7 +265,7 @@
                   </div> 
                   <div class="col-lg-4 mb-lg-5 col-md-6">
                     <div class="logo">
-                        <img src="Abdallah/new-44/images/img_03.jpg"alt="" class="img-fluid">
+                        <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(5).png"alt="" class="img-fluid">
                         <div class="layout">
                           <i class="fa fa-link">
                           </i>
@@ -382,7 +382,7 @@
 <div class="row">
   <div class="col-lg-12">
 <div class="foot">
-    Copy Right 2020 © By <a href="#">Abdallah-Rabeh</a> All Rights Reserved
+    Copy Right 2020 © By <a href="https://web.facebook.com/rabeh56yahoo.co">Abdallah-Rabeh</a> All Rights Reserved
 </div>
 
   </div>
