--- a/Home.html
+++ b/Home.html
@@ -220,7 +220,7 @@
                       </div> 
                       <div class="col-lg-4 mb-lg-5 col-md-6">
                         <div class="logo">
-                            <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(1).jpg"alt="" class="img-fluid" style="max-width: 70%;">
+                            <img src="image/Screenshot_2020-09-29 Abdallah Rabeh(2).png"alt="" class="img-fluid">
                             <div class="layout">
                               <i class="fa fa-link">
                               </i>
