--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
       <!-------------start Our navber------------------>
       <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
-            <a class="navbar-brand" href="#"><span>A</span>bdallah Rabeh</a>
+            <a class="navbar-brand" href="#">Abdallah Rabeh</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span></span>
              <span class="span"></span>
