--- a/Home.html
+++ b/Home.html
@@ -15,6 +15,22 @@
     <script src="js/Respond.js"></script>
 </head>
 <body>
+  <div class="louayat" style=" 
+    display: none;
+    width: 100%;
+    height: 100vh;
+    display: block;
+    /* background-color: #e91e63; */
+    background-image: url(images/about.jpg);
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999999;">   
+      <img src="image/PertinentIgnorantKakapo-size_restricted.gif" alt="" style="margin: auto;" class="img-fluid">     
+   </div>
     <header>
       <!-------------start Our navber------------------>
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -419,6 +435,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery-2.1.1.js"></script>    
     <script src="js/popper.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
 </body>
