--- a/Home.html
+++ b/Home.html
@@ -20,9 +20,6 @@
     width: 100%;
     height: 100vh;
     display: block;
-    /* background-color: #e91e63; */
-    background-image: url(images/about.jpg);
-    background-size: cover;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -417,7 +414,12 @@
 <div class="row">
   <div class="col-lg-12">
 <div class="foot">
-    Copy Right 2020 © By <a href="https://web.facebook.com/rabeh56yahoo.co">Abdallah-Rabeh</a> All Rights Reserved
+  <p style="text-align: center;
+        margin: auto;
+        display: block;
+  ">All rights reserved  ©  By 2020</p> <p style="text-align: center; margin: auto;
+        display: block; margin-top: 4px"><a href="https://web.facebook.com/rabeh56yahoo.co">Abdallah-Rabeh</a></p>
+  
 </div>
 
   </div>
