--- a/Home.html
+++ b/Home.html
@@ -46,7 +46,7 @@
                 </li>
                
                 <li class="nav-item">
-                        <a class="nav-link" href="#" data-scroll="Skills"> Skills</a>
+                        <a class="nav-link" href="#" data-scroll="Skills">Skills</a>
                 </li>
                       
                 <li class="nav-item">
@@ -79,7 +79,7 @@
           <div class="col-md-12">
             <div class="Our Services">
                 <div class="header text-center">
-                    <h2 class="h1">Skills</h2>
+                    <h2 class="h1">My Skills</h2>
                     <span class="top"></span>
                     <span class="middle"></span>
                     <span class="top"></span>
@@ -227,7 +227,7 @@
                                 </i>
                               <button style="padding: 20px;
                                 display: block;
-                                margin: 50% auto;
+                                margin: 45% auto;
                                   "
                                 onclick="window.location.href='./Abdallah/APHD/Home.html';" >Project 1
                               </button>
@@ -243,7 +243,7 @@
                             </i>
                             <button style="padding: 20px;
                             display: block;
-                            margin: 50% auto;
+                            margin: 45% auto;
                               "
                             onclick="window.location.href='./Abdallah/chef/Home.html';" >Project 2</button>
                           </div>
@@ -258,7 +258,7 @@
                         </i>
                         <button style="padding: 20px;
                         display: block;
-                        margin: 50% auto;
+                        margin: 48% auto;
                           "
                         onclick="window.location.href='./Abdallah/fokir/Home.html';" >Project 3</button>
                       </div>
@@ -273,7 +273,7 @@
                         </i>
                         <button style="padding: 20px;
                         display: block;
-                        margin: 50% auto;
+                        margin: 48% auto;
                           "
                         onclick="window.location.href='./Abdallah/crispy-1/Home.html';" >Project 4</button>
                       </div>
@@ -288,7 +288,7 @@
                         </i>
                         <button style="padding: 20px;
                         display: block;
-                        margin: 50% auto;
+                        margin: 40% auto;
                           "
                         onclick="window.location.href='./Abdallah/new-44/index.html';" >Project 5</button>
                       </div>
@@ -303,7 +303,7 @@
                         </i>
                         <button style="padding: 20px;
                         display: block;
-                        margin: 50% auto;
+                        margin: 40% auto;
                           "
                         onclick="window.location.href='./Abdallah/session-4/Home.html';" >Project 6</button>
                       </div>
