--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="Home.html"  target=blank>Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="Home.html">Home</a>
                 </li>
                
                 <li class="nav-item">
